--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the Store controller here.
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.image-size {
+  max-width: 100%;
+  max-height: 100%;
+  border: .3em solid limegreen;
+}
+
+
+.bold{
+  font-weight: bold;
+  font-size: 20px;
+}
