--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,28 +1,20 @@
   <div class="container">
     <p id="notice"><%= notice %></p>
-    <h1>Your Awesome E-store Catalog</h1>
+    <h1 class="page-header"><i class="fa fa-shopping-cart"></i> Buy Your Awesome Phones</h1>
   </div>
-  <% cache @products do %>
-      <% @products.each do |product| %>
-          <% cache product do %>
-      <div class="container">
+
+     <div class="container">
+      <% @products.each_slice(4) do |products| %>
         <div class="row">
-        <div class="col-md-4">
-         <div class="panel panel-success">
-          <div class="panel-heading">
-            <h3><%= product.title %></h3>
-          </div>
-          <div class="panel-body">
-            <%= image_tag(product.image_url) %>
-          </div>
-          <div class="panel-footer">
-            <%= sanitize(product.description) %>
-          </div>
-          <span class="btn btn-success btn-block"><%= number_to_currency(product.price) %></span>
-         </div>
+          <% products.each do |product| %>
+            <div class="col-md-3">
+              <%= image_tag(product.image_url, :class => "image-size") %>
+                <h5 class="bold"><%= product.title %></h5>
+                <%= sanitize(product.description) %>
+              <span class="btn btn-success btn-block"><%= number_to_currency(product.price) %></span>
+            </div>
+          <% end %>
         </div>
-        </div>
-      </div>
        <% end %>
-      <% end %>
-<% end %>
+     </div>
+
