--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -2,21 +2,7 @@
   <div class="row">
     <div class="col-md-8">
       <p id="notice"><%= notice %></p>
-      <h2>Your Cart</h2>
-      <table class="table table-striped">
-        <% @cart.line_items.each do |item| %>
-            <tr>
-              <td><%= item.quantity %>&times;</td>
-              <td><%= item.product.title %></td>
-              <td class="item_price"><%= number_to_currency(item.total_price) %></td>
-            </tr>
-        <% end %>
-        <tr class="total_line">
-          <td colspan="2", id="total">Total</td>
-          <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
-        </tr>
-      </table>
-      <%= button_to 'Empty cart', @cart, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-success" %>
+      <%= render @cart %>
     </div>
   </div>
 </div>
