--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,17 @@
   <div class="container">
-    <p id="notice"><%= notice %></p>
-    <h1 class="page-header"><i class="fa fa-shopping-cart"></i> Buy Your Awesome Phones</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <p id="notice"><%= notice %></p>
+        <h1><i class="fa fa-shopping-cart"></i> Buy Your Awesome Phones</h1>
+      </div>
+      <div class="col-md-6">
+        <% if @cart %>
+            <%= render @cart %>
+        <% end %>
+      </div>
+    </div>
   </div>
+  <hr id="line">
 
      <div class="container">
       <% @products.each_slice(4) do |products| %>
