--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -7,5 +7,6 @@
     <td class="total_cell"><%= number_to_currency(cart.total_price) %></td>
   </tr>
 </table>
-<%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-success" %>
+    <%= button_to 'Checkout', new_order1_path , method: :get, class:"btn btn-success", id:"ali" %>
+    <%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-success" %>
 <% end %>
